--- a/coreapp/templates/login.html
+++ b/coreapp/templates/login.html
@@ -13,6 +13,8 @@
         <div class="col">
             <h1 class="h2">Log in</h1>
             <form action="/loginattempt" method="post">
+                {% csrf_token %}
+
                 <div class="row">
                     <p>Username: <input type="text" name="username"></p>
                 </div>
@@ -25,6 +27,8 @@
           <div class="col">
             <h1 class="h2">Sign Up</h1>
             <form action="/signupattempt" method="post">
+                {% csrf_token %}
+
                 <p>Username: <input type="text" name="username"></p>
                 <p>Password: <input type="password" name="password"></p>                    
                 <!-- <p>Confirm password: <input type="password" name="passwordconfirmation"></p> -->
