--- a/coreapp/templates/login.html
+++ b/coreapp/templates/login.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container text-center">
-        <div class="row">
+
+        <div class="pt-5 row">
             <div class="col">
                 <h1 class="h2">Log in</h1>
                 <form action="/loginattempt" method="post">
@@ -33,10 +34,13 @@
                     <label for="signup_password">Password: </label><input class="form-control" type="password" name="password" id="signup_password">
                 </div>
                 <div class="row"><p>Signing up as a: </p>
+                    <div class="col">
                     <label for="signup_as_coordinator"> Coordinator </label>
                     <input type="radio" name="user_type" value="coordinator" id="signupascoordinator">
+                    </div>
+                        <div class="col">
                     <label for="signup_as_user">User </label>
-                    <input type="radio" name="user_type" value="user"></div>
+                            <input type="radio" name="user_type" value="user"></div></div>
                 <div class="row"><label for="signup_email">Email: </label><input type="email" class="form-control" name="email" id="signup_email">
                 </div>
                 <div class="row"><label for="signup_phonenumber">Phone: </label><input type="tel" class="form-control"
