--- a/coreapp/templates/login.html
+++ b/coreapp/templates/login.html
@@ -20,7 +20,7 @@
                 <div class="row">
                     <label for="login_password">Password: <input class="form-control" type="password" name="password" id="password"></label>
                 </div>
-                <button type="submit" class="btn btn-primary">Log In</button>
+                <button type="submit" class="btn mt-2 btn-primary">Log In</button>
             </form>
         </div>
         <div class="col">
@@ -47,7 +47,7 @@
                                                                          name="phonenumber" id="signup_phonenumber"></div>
                 <div class="row"><label for="signup_address">Address: </label><input type="text" class="form-control"
                                                                        name="address" id="signup_address"></div>
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn mt-2 btn-primary">Sign Up</button>
             </form>
           </div>
         </div>
