--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -18,29 +18,28 @@
 
 
 <body>
-    <div class="container-lg" style="max-width: none; padding-left: 35px; padding-right: 35px">
+    <div class="container-lg">
         <div class="row">
             <div class="col-lg-6">
-                <div class="card lg-6">
+                <div class="card mt-5">
                     <div class="card-header">
                         <h2>All users</h2>
                     </div>
                     <div class="card-body">
                         <div class="overflow-auto" style="max-height: 400px;">
                             <table class="table table-striped table-bordered table-hover table-hover-cursor table-sm">
-                                 <thead>
-                                        <tr>
-                                            <th>Username</th>
-                                            <th>Type</th>
-                                            <th>Email</th>
-                                            <th>Address</th>
-                                            <th>Phone</th>
-                                        </tr>
-                                  </thead>
-
+                                <thead>
+                                    <tr>
+                                        <th>Username</th>
+                                        <th>Type</th>
+                                        <th>Password Hash</th>
+                                        <th>Address</th>
+                                        <th>Registered</th>
+                                    </tr>
+                                </thead>
                                 <tbody>
                                     {% for user in all_user_data %}
-                                    <tr data-row-id="{{ user.username }}">
+                                    <tr>
                                         <td>{{ user.username }}</td>
                                         <td>
                                             {% if user.type == 0 %}
@@ -53,9 +52,9 @@
                                                 Unknown Type
                                             {% endif %}
                                         </td>
-                                        <td>{{ user.email }}</td>
+                                        <td class="text-truncate">{{ user.password_hash }}</td>
                                         <td>{{ user.address }}</td>
-                                        <td>{{ user.phone }}</td>
+                                        <td>{% if user.registered %}Yes{% else %}No{% endif %}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
@@ -64,7 +63,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-6">
                 <div class="card mt-5">
                     <div class="card-header">
@@ -73,15 +71,15 @@
                     <div class="card-body">
                         <div class="overflow-auto" style="max-height: 400px;">
                             <table class="table table-striped table-bordered table-hover table-hover-cursor table-sm">
-                                  <thead>
-                                        <tr>
-                                            <th>Username</th>
-                                            <th>Type</th>
-                                            <th>Email</th>
-                                            <th>Address</th>
-                                            <th>Phone</th>
-                                        </tr>
-                                  </thead>
+                               <thead>
+                                    <tr>
+                                        <th>Username</th>
+                                        <th>Type</th>
+                                        <th>Password Hash</th>
+                                        <th>Address</th>
+                                        <th>Registered</th>
+                                    </tr>
+                                </thead>
 
                                 <tbody>
                                     {% for user in pending_user_data %}
@@ -98,9 +96,9 @@
                                                 Unknown Type
                                             {% endif %}
                                         </td>
-                                        <td>{{ user.email }}</td>
+                                        <td class="text-truncate">{{ user.password_hash }}</td>
                                         <td>{{ user.address }}</td>
-                                        <td>{{ user.phone }}</td>
+                                        <td>{% if user.registered %}Yes{% else %}No{% endif %}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
