--- a/coreapp/templates/layout.html
+++ b/coreapp/templates/layout.html
@@ -49,7 +49,7 @@
                 <a class="list-group-item active" href="#">Upcoming Events</a>
                 <a class="list-group-item" href="#">Clubs</a>
                 <a class="list-group-item" href="#">↳ My Clubs</a>
-                <a class="list-group-item" href="#">My Profile</a>
+                <a class="list-group-item" href="/user/updatedetails">My Profile</a>
               </ul>
             </div>
           </div>
