--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.2/dist/bootstrap-table.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>User Data</title>
     <style>
         /* Additional styles for smaller tables */
@@ -18,11 +15,14 @@
 
     </style>
 
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.22.2/dist/bootstrap-table.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.2/dist/bootstrap-table.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 </head>
 
 
@@ -37,16 +37,23 @@
                 </a>
                 <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center">
                     <li class="nav-item">
-                        <button class="btn py-3 px-2" data-section="user_modification" title="" data-bs-toggle="tooltip"
+                        <button class="btn py-3 px-2 sectionBtn" data-section="user_modification" title="" data-bs-toggle="tooltip"
                                 data-bs-placement="right" data-bs-original-title="Home">
                             <i style="font-size: 1.5rem;" class="bi-people fs-1"></i>
                         </button>
                     </li>
 
                     <li>
-                        <button class="btn py-3 px-2" data-section="coordinator_modification" title=""
+                        <button class="btn py-3 px-2 sectionBtn" data-section="coordinator_modification" title=""
                                 data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
                             <i style="font-size: 1.5rem;" class="bi-speedometer2 fs-1"></i>
+                        </button>
+                    </li>
+
+                     <li>
+                        <button class="btn py-3 px-2 sectionBtn" data-section="membership_modification" title=""
+                                data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
+                            <i style="font-size: 1.5rem;" class="bi bi-book fs-1"></i>
                         </button>
                     </li>
 
@@ -254,6 +261,48 @@
                     </div>
                 </div>
             </div>
+            <div id="membership_modification" class="section">
+                {% for club_id, users in all_clubs.items %}
+                    <div class="card">
+                        <div class="card-header" id="heading{{ club_id }}">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ club_id }}" aria-expanded="true" aria-controls="collapse{{ club_id }}">
+                                    Club {{ club_id }}
+                                </button>
+                            </h2>
+                        </div>
+
+                        <div id="collapse{{ club_id }}" class="collapse" aria-labelledby="heading{{ club_id }}" data-parent="#accordionExample">
+                            <div class="card-body">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">User</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for user in users %}
+                                            <tr>
+                                                <th scope="row">{{ forloop.counter }}</th>
+                                                <td>{{ user }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+{#                  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">#}
+{#                    Button with data-bs-target#}
+{#                  </button>#}
+{#                    <div class="collapse" id="collapseExample">#}
+{#                      <div class="card card-body">#}
+{#                        Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.#}
+{#                      </div>#}
+{#                    </div>#}
+            </div>
         </div>
     </div>
 </div>
@@ -378,7 +427,7 @@
         // Show the first section
         $('#user_modification').show();
         // When a button is clicked
-        $('.btn').click(function () {
+        $('.sectionBtn').click(function () {
             console.log('clicked')
             // Hide all sections
             $('.section').hide();
