--- a/coreapp/templates/pages/login.html
+++ b/coreapp/templates/pages/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sign In or Log in</title>
+    <title>Sign Up or Log in</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   </head>
   <body>
@@ -14,10 +14,12 @@
                 <form action="/loginattempt" method="post">
                 {% csrf_token %}
                 <div class="row">
-                    <label for="login_username">Username: <input class="form-control" type="text" name="username" id="username"></label>
+                    <label for="login_username">Username: </label>
+                        <input class="form-control" type="text" name="username" id="username">
                 </div>
                 <div class="row">
-                    <label for="login_password">Password: <input class="form-control" type="password" name="password" id="password"></label>
+                    <label for="login_password">Password: </label>
+                        <input class="form-control" type="password" name="password" id="password">
                 </div>
                 <button type="submit" class="btn mt-2 btn-primary">Log In</button>
             </form>
@@ -27,10 +29,12 @@
             <form action="/signupattempt" method="post">
                 {% csrf_token %}
                 <div class="row">
-                <label for="signup_username">Username: </label><input type="text" class="form-control" name="username" id="signup_username">
+                <label for="signup_username">Username: </label>
+                    <input type="text" class="form-control" name="username" id="signup_username">
                 </div>
                 <div class="row">
-                    <label for="signup_password">Password: </label><input class="form-control" type="password" name="password" id="signup_password">
+                    <label for="signup_password">Password: </label>
+                    <input class="form-control" type="password" name="password" id="signup_password">
                 </div>
                 <div class="row"><p>Signing up as a: </p>
                     <div class="col">
@@ -40,12 +44,15 @@
                         <div class="col">
                     <label for="signup_as_user">User </label>
                             <input type="radio" name="user_type" value="user"></div></div>
-                <div class="row"><label for="signup_email">Email: </label><input type="email" class="form-control" name="email" id="signup_email">
+                <div class="row"><label for="signup_email">Email: </label>
+                    <input type="email" class="form-control" name="email" id="signup_email">
                 </div>
-                <div class="row"><label for="signup_phonenumber">Phone: </label><input type="tel" class="form-control"
-                                                                         name="phonenumber" id="signup_phonenumber"></div>
-                <div class="row"><label for="signup_address">Address: </label><input type="text" class="form-control"
-                                                                       name="address" id="signup_address"></div>
+                <div class="row"><label for="signup_phonenumber">Phone: </label>
+                    <input type="tel" class="form-control" name="phonenumber" id="signup_phonenumber">
+                </div>
+                <div class="row"><label for="signup_address">Address: </label>
+                    <input type="text" class="form-control" name="address" id="signup_address">
+                </div>
                 <button type="submit" class="btn mt-2 btn-primary">Sign Up</button>
             </form>
           </div>
