--- a/coreapp/templates/admin.html
+++ b/coreapp/templates/admin.html
@@ -262,12 +262,12 @@
                 </div>
             </div>
             <div id="membership_modification" class="section">
-                {% for club_id, users in all_clubs.items %}
+                {% for club_username, users in membership_requests.items %}
                     <div class="card">
-                        <div class="card-header" id="heading{{ club_id }}">
+                        <div class="card-header" id="heading{{ club_username }}">
                             <h2 class="mb-0">
                                 <button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ club_id }}" aria-expanded="true" aria-controls="collapse{{ club_id }}">
-                                    Club {{ club_id }}
+                                    {{ club_username }}
                                 </button>
                             </h2>
                         </div>
