--- a/coreapp/templates/layout.html
+++ b/coreapp/templates/layout.html
@@ -48,7 +48,7 @@
                 <!-- TODO: differing navbars by user profile type -->
                 <a class="list-group-item active" href="#">Upcoming Events</a>
                 <a class="list-group-item" href="#">Clubs</a>
-                <a class="list-group-item" href="#">↳ My Clubs</a>
+                <a class="list-group-item" href="home/clubview">↳ My Clubs</a>
                 <a class="list-group-item" href="/user/updatedetails">My Profile</a>
               </ul>
             </div>
